...
  
    var body: some View {
        GeometryReader { geometry in
            ScrollView {
                VStack {
                  NavigationLink(destination: InAppView()) {
                      Text("Back To My Toolbox")
                          .frame(minWidth:0, maxWidth:325)
                          .background(Color.orange)
                          .font(.title)
                          .foregroundColor(.white)
                          .cornerRadius(40)
                  }
...
