...
              }
              Text(selfData.data.name + "'s ToolBox")
                .font(.largeTitle)
            }
            Divider()
            NavigationLink(destination: AddToolView(ownerId: selfData.data.id)) {
                Text("Add New Tool")
                    .frame(minWidth:0, maxWidth:325)
                    .background(Color.orange)
                    .font(.title)
                    .foregroundColor(.white)
                    .cornerRadius(40)
            }
...
